# ocpi-tariffs-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
src/ocpi_tariffs/core/: enums.py  utils.py
src/ocpi_tariffs/v2_1_1/: __init__.py  models.py  tariff_calculator.py
src/ocpi_tariffs/v2_2_1/: enums.py  models.py  tariff_calculator.py
tests/: test_pricer.py  test_v2_2_1_examples.py
tests/test_data/grace_period_parking_time/: output_lint__tariff.json
tests/test_data/misspelled_field/: output_parse__tariff.json
tests/test_data/v2_1_1/025kwh/: cdr.json  tariff.json
tests/test_data/v2_1_1/045kwh_start_parking_min_duration/: cdr.json  tariff.json
tests/test_data/v2_1_1/first_hour_kwh_free/: cdr.json  tariff.json
tests/test_data/v2_1_1/free_of_charge/: cdr.json  tariff.json
tests/test_data/v2_1_1/gireve_cdr/: cdr.json  tariff.json
tests/test_data/v2_1_1/session_time/: cdr.json  tariff.json
tests/test_data/v2_1_1/step_size/: cdr.json  tariff.json
tests/test_data/v2_1_1/step_size_energy/: cdr.json  tariff.json
tests/test_data/v2_2_1/codeberg_issue_228/: cdr.json  output_price__cdr.json
tests/test_data/v2_2_1/misspelled_field/: output_lint__tariff.json  tariff.json
tests/test_data/v2_2_1/step_size/: cdr1.json
