[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocpi-tariffs"
version = "0.1.0"
description = "OCPI 2.2.1 Tariff Calculation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-python-dateutil",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ocpi_tariffs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
